<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">bestShopi</string>
    <string name="personalized_clothes_shopping_recommendation_system">Personalized Clothes Shopping Recommendation System</string>
    <string name="todo">TODO</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_new_product">Add New Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="recommend_me">Recommend me</string>
    <string name="textview1">Brand</string>
    <string name="textview2">Color</string>
    <string name="textview3">Price</string>
    <string name="textview4">Size</string>
    <string name="textview5">Categories</string>

    <string name="category">CATEGORY</string>

    <string-array name="Categories">
        <item>Shirt</item>
        <item>Pant</item>
        <item>Shoe</item>
        <item>t-Shirt</item>
        <item>Jeans</item>
        <item>Sweater</item>
    </string-array>

    <string-array name="Brands">
        <item>Puma</item>
        <item>Nike</item>
        <item>Polo</item>
        <item>Crocodile</item>
    </string-array>
    <string-array name="Colors">
        <item>Red</item>
        <item>Green</item>
        <item>Gray</item>
        <item>Blue</item>
    </string-array>
    <string-array name="Price">
        <item>RM10-RM50</item>
        <item>RM50-RM100</item>
        <item>RM100-RM150</item>
        <item>RM300-RM400</item>
    </string-array>
    <string-array name="Sizes">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>
